# XRayStudio

./: .gitignore  Makefile.am  configure.in  copyright.txt
src/: Makefile.am  XRayStudio.pro  banner.qrc  bannerdialog.cpp  bannerdialog.h  bannerdialog.ui  choosesavedevice.cpp  choosesavedevice.h  choosesavedevice.ui  connectdialog.cpp  connectdialog.h  connectdialog.ui  consoleform.cpp  consoleform.h  consoleform.ui  devicecommands.cpp  devicecommands.h  devicecommands.ui  deviceinspect.cpp  deviceinspect.h  deviceinspect.ui  deviceinterf.cpp  deviceinterf.h  devicenameedit.cpp  devicenameedit.h  devices.cpp  icondiagram.cpp  icondiagram.h  icondiagramwidget.cpp  icondiagramwidget.h  icondiagramwidget.ui  loaddevice.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectdialog.cpp  projectdialog.h  projectdialog.ui  projtemplatedialog.cpp  (+18 more)
src/devices/TemplateDevices/Standard setup/: .directory
src/devices/TemplateDevices/Standard setup/.dev/: composition.cmd  composition.dev  detector.dev  geom3d.dev  sample.cmd  source.cmd  source.dev  spectrum.frm
src/devices/TemplateProjects/: quadrics.frm  sample.cmd  sample.frm  source.cmd  source.frm
templates/TemplateDevices/StandardSetup/.dev/: composition.frm  detector.cmd  detector.frm  geom3d.cmd  geom3d.frm  quadrics.cmd  quadrics.dev  quadrics.frm  sample.bnr  sample.dev  sample.frm  source.frm  spectrum.cmd  spectrum.dev
templates/TemplateProjects/cylind_shell/: composition.cmd  composition.frm  composition.ilk  cylind_shell.xrs  detector.cmd  geom3d.cmd  geom3d.ilk  quadrics.cmd  quadrics.ilk  source.ilk  spectrum.cmd  spectrum.frm
templates/TemplateProjects/fluor_layers/: composition.cmd  detector.cmd  geom3d.cmd  geom3d.frm  quadrics.cmd  sample.cmd  source.cmd  spectrum.cmd
templates/TemplateProjects/materials/: composition.cmd  detector.cmd  geom3d.cmd  quadrics.cmd  sample.cmd  sample.ilk  source.cmd
templates/TemplateProjects/quadrics/: composition.cmd  detector.cmd  geom3d.cmd  quadrics.cmd  source.cmd  spectrum.cmd  spectrum.ilk
templates/TemplateProjects/star1/: composition.cmd  detector.cmd  geom3d.cmd  quadrics.cmd  sample.cmd  source.cmd
templates/TemplateProjects/star2/: detector.cmd  detector.ilk  geom3d.cmd  quadrics.cmd
templates/TemplateProjects/wheel/: composition.cmd  detector.cmd  detector.frm  geom3d.cmd  quadrics.cmd  sample.cmd  source.cmd
templates/TemplateProjects/xmi-msim/: composition.cmd  detector.cmd  detector.frm  geom3d.cmd  quadrics.cmd  sample.cmd  source.cmd  spectrum.cmd
